Rename CSS file; remove shadow, fix overflow behavior

--- a/org-doom-molokai.css
+++ b/org-doom-molokai.css
@@ -90,24 +90,24 @@ p.verse {
 }
 pre {
     border: 1px solid #ccc;
-    box-shadow: 3px 3px 3px #eee;
+    /* box-shadow: 3px 3px 3px #eee; */
     padding: 8pt;
     font-family: monospace;
-    overflow: auto;
+    overflow: scroll;
     margin: 1.2em;
 }
 pre.src {
     position: relative;
-    overflow: visible;
+    overflow: scroll;
     padding-top: 1.2em;
 }
 pre.src:before {
     display: none;
     position: absolute;
     background-color: #111111;
-    top: -10px;
-    right: 10px;
-    padding: 3px;
+    /* top: -10px; */
+    /* right: 10px; */
+    /* padding: 3px; */
     border: 1px solid black;
 }
 pre.src:hover:before {
